--- a/SharpTS.csproj
+++ b/SharpTS.csproj
@@ -1,15 +1,17 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFramework>netcoreapp2.2</TargetFramework>
+		<TargetFramework>netcoreapp3.1</TargetFramework>
 		<Title>SharpTS - TypeScript and C# Interop</Title>
 		<Authors>Roman Jámbor</Authors>
+		<LangVersion>8</LangVersion>
 	</PropertyGroup>
 
 	<ItemGroup>
 	  <PackageReference Include="Castle.Core" Version="4.4.0" />
-	  <PackageReference Include="Chromely.CefGlue.Winapi" Version="4.0.70.1" />
-	  <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.2.0" />
+	  <PackageReference Include="Chromely" Version="5.1.83-pre01" />
+	  <PackageReference Include="Chromely.Core" Version="5.1.0-pre01" />
+	  <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.6" />
 	  <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
 	</ItemGroup>
 
