--- a/Client/package.json
+++ b/Client/package.json
@@ -31,6 +31,8 @@
     "**/*.css"
   ],
   "dependencies": {
-    "globby": "^10.0.1"
+    "globby": "^10.0.1",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
   }
 }
