--- a/SharpTS.csproj
+++ b/SharpTS.csproj
@@ -12,6 +12,7 @@
 	  <PackageReference Include="Chromely" Version="5.1.83-pre01" />
 	  <PackageReference Include="Chromely.Core" Version="5.1.0-pre01" />
 	  <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.6" />
+	  <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="3.1.5" />
 	  <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
 	</ItemGroup>
 
