--- a/Client/tsconfig.json
+++ b/Client/tsconfig.json
@@ -8,7 +8,8 @@
     "jsx": "react",
     "plugins": [
       { "transform": "tst-import-less", "after": false }
-    ]
+    ],
+    "stripInternal": true
   },
   "include": [
     "**/*.ts",
